objects/SFDCToCTSAsynchRequest__c.object
<CustomObject>
    <description>Stores DE-normalized CTS Ticket data to be executed by BULK job on a schedule to create CTS Tickets</description>
    <fields>
        <fullName>API_Identifier__c</fullName>
        <description>Identifier when the Integration Type is API; used by CTS system to create and place the new ticket in the proper CTS queue; required when Integration Type is API</description>
        <inlineHelpText>Identifier when the Integration Type is API; used by CTS system to create and place the new ticket in the proper CTS queue; required when Integration Type is API</inlineHelpText>
        <label>API Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS_Email_Address__c</fullName>
        <description>Email address used to send object data to for creating CTS ticket when the Integration type is Email; required when Integration type is Email</description>
        <inlineHelpText>Email address used to send object data to for creating CTS ticket when the Integration type is Email; required when Integration type is Email</inlineHelpText>
        <label>CTS Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailTemplateId__c</fullName>
        <description>The Id of the Email Template being used to pass data elements to CTS</description>
        <inlineHelpText>The Id of the Email Template being used to pass data elements to CTS</inlineHelpText>
        <label>Email Template Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <description>Used to capture any error responses/ details for the request record</description>
        <inlineHelpText>Used to capture any error responses/ details for the request record</inlineHelpText>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalTicketId__c</fullName>
        <description>The Ticket Id created in the CTS system</description>
        <inlineHelpText>The Ticket Id created in the CTS system</inlineHelpText>
        <label>External Ticket Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <description>Integration Type (API or Email) which determines the internal process methods to be called for ticket creation in CTS</description>
        <inlineHelpText>Integration Type (API or Email) which determines the internal process methods to be called for ticket creation in CTS</inlineHelpText>
        <label>Integration Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberOfRetryAttempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of attempts made to send a request to the CTS API for creating a ticket</description>
        <inlineHelpText>Number of attempts made to send a request to the CTS API for creating a ticket</inlineHelpText>
        <label>Number Of Retry Attempts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The corresponding record Id based on the Object Name</description>
        <inlineHelpText>The corresponding record Id based on the Object Name</inlineHelpText>
        <label>Object Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Salesforce Objects integrated with CTS</description>
        <inlineHelpText>Salesforce Objects integrated with CTS</inlineHelpText>
        <label>Object Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Customer_Surveys__c</fullName>
                </value>
                <value>
                    <fullName>Organic_Analysis__c</fullName>
                </value>
                <value>
                    <fullName>Quality_Case__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Route_MDT_Id__c</fullName>
        <description>Unique Id from the CTSObjectTriggerMap which represents the record used for the metadata populated for this record</description>
        <inlineHelpText>Unique Id from the CTSObjectTriggerMap which represents the record used for the metadata populated for this record</inlineHelpText>
        <label>Object Route MDT Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedDateTime__c</fullName>
        <description>Date/ time the record was processed to CTS for ticket creation</description>
        <inlineHelpText>Date/ time the record was processed to CTS for ticket creation</inlineHelpText>
        <label>Processed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ScheduledDateTime__c</fullName>
        <description>The scheduled date/ time of the Async Record to be triggered to create the CTS ticket</description>
        <inlineHelpText>The scheduled date/ time of the Async Record to be triggered to create the CTS ticket</inlineHelpText>
        <label>Scheduled Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>"NEW"</defaultValue>
        <description>Async Request Status indicating the current state of the record</description>
        <inlineHelpText>Async Request Status indicating the current state of the record</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>INPROCESS</fullName>
                </value>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>UNQUALIFIED</fullName>
                </value>
                <value>
                    <fullName>REPROCESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTS_Ticket_URL__c</fullName>
        <description>Click-able link to the correct CTS Ticket instance record</description>
        <inlineHelpText>Click-able link to the correct CTS Ticket instance record</inlineHelpText>
        <label>CTS Ticket URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Email_Template_URL__c</fullName>
        <description>Click-able link to the Email Template used for the details of the API request for creating a CTS Ticket</description>
        <inlineHelpText>Click-able link to the Email Template used for the details of the API request for creating a CTS Ticket</inlineHelpText>
        <label>Email Template URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDC_Record_URL__c</fullName>
        <description>Click-able link to the Salesforce instance record associated to the Request record</description>
        <inlineHelpText>Click-able link to the Salesforce instance record associated to the Request record</inlineHelpText>
        <label>SFDC Record URL</label>
        <type>Url</type>
    </fields>
    <label>SFDCToCTSAsynchRequest</label>
    <listViews>
        <fullName>All_ERROR_and_New_UnProcessed_All_Time</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ExternalTicketId__c</columns>
        <columns>API_Identifier__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ObjectId__c</columns>
        <columns>ErrorDescription__c</columns>
        <columns>CTS_Ticket_URL__c</columns>
        <columns>ScheduledDateTime__c</columns>
        <columns>Object_Name__c</columns>
        <columns>SFDC_Record_URL__c</columns>
        <columns>NumberOfRetryAttempts__c</columns>
        <columns>Email_Template_URL__c</columns>
        <columns>Integration_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ScheduledDateTime__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ERROR,NEW</value>
        </filters>
        <label>All_ERROR and New UnProcessed All Time</label>
    </listViews>
    <listViews>
        <fullName>All_ERROR_and_New_since_last_7_Days</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ExternalTicketId__c</columns>
        <columns>API_Identifier__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ObjectId__c</columns>
        <columns>ErrorDescription__c</columns>
        <columns>CTS_Ticket_URL__c</columns>
        <columns>ScheduledDateTime__c</columns>
        <columns>Object_Name__c</columns>
        <columns>SFDC_Record_URL__c</columns>
        <columns>NumberOfRetryAttempts__c</columns>
        <columns>Email_Template_URL__c</columns>
        <columns>Integration_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ScheduledDateTime__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ERROR,NEW</value>
        </filters>
        <label>All_ERROR and New UnProcessed 7 Days</label>
    </listViews>
    <listViews>
        <fullName>All_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Object_Name__c</columns>
        <columns>ObjectId__c</columns>
        <columns>SFDC_Record_URL__c</columns>
        <columns>API_Identifier__c</columns>
        <columns>ExternalTicketId__c</columns>
        <columns>ErrorDescription__c</columns>
        <columns>CTS_Ticket_URL__c</columns>
        <columns>Email_Template_URL__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ScheduledDateTime__c</columns>
        <columns>ProcessedDateTime__c</columns>
        <columns>NumberOfRetryAttempts__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Requests</label>
    </listViews>
    <listViews>
        <fullName>CTS_Error_Records_Retry_Required</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>API_Identifier__c</columns>
        <columns>CTS_Email_Address__c</columns>
        <columns>CTS_Ticket_URL__c</columns>
        <columns>EmailTemplateId__c</columns>
        <columns>Email_Template_URL__c</columns>
        <columns>ErrorDescription__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>NumberOfRetryAttempts__c</columns>
        <columns>ObjectId__c</columns>
        <columns>Object_Name__c</columns>
        <columns>ProcessedDateTime__c</columns>
        <columns>ScheduledDateTime__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <filters>
            <field>NumberOfRetryAttempts__c</field>
            <operation>lessThan</operation>
            <value>3</value>
        </filters>
        <label>CTS - Error Records - Retry Required</label>
    </listViews>
    <listViews>
        <fullName>CTS_Error_Records_Stop_Retry</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>API_Identifier__c</columns>
        <columns>CTS_Email_Address__c</columns>
        <columns>CTS_Ticket_URL__c</columns>
        <columns>EmailTemplateId__c</columns>
        <columns>Email_Template_URL__c</columns>
        <columns>ErrorDescription__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>NumberOfRetryAttempts__c</columns>
        <columns>ObjectId__c</columns>
        <columns>Object_Name__c</columns>
        <columns>ProcessedDateTime__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <filters>
            <field>NumberOfRetryAttempts__c</field>
            <operation>greaterOrEqual</operation>
            <value>3</value>
        </filters>
        <label>CTS - Error Records - Stop Retry</label>
    </listViews>
    <listViews>
        <fullName>Charge_Failure_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Object_Name__c</columns>
        <columns>ObjectId__c</columns>
        <columns>SFDC_Record_URL__c</columns>
        <columns>API_Identifier__c</columns>
        <columns>ExternalTicketId__c</columns>
        <columns>CTS_Ticket_URL__c</columns>
        <columns>Email_Template_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ScheduledDateTime__c</columns>
        <columns>ProcessedDateTime__c</columns>
        <columns>NumberOfRetryAttempts__c</columns>
        <columns>ErrorDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>API_Identifier__c</field>
            <operation>equals</operation>
            <value>SFDCY_CASE_000007</value>
        </filters>
        <label>Charge Failure Requests</label>
    </listViews>
    <listViews>
        <fullName>NCS_and_CSC_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Object_Name__c</columns>
        <columns>ObjectId__c</columns>
        <columns>SFDC_Record_URL__c</columns>
        <columns>API_Identifier__c</columns>
        <columns>ExternalTicketId__c</columns>
        <columns>CTS_Ticket_URL__c</columns>
        <columns>Email_Template_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ScheduledDateTime__c</columns>
        <columns>ProcessedDateTime__c</columns>
        <columns>NumberOfRetryAttempts__c</columns>
        <columns>ErrorDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>API_Identifier__c</field>
            <operation>equals</operation>
            <value>SFDCY_CASE_000010,SFDCY_CASE_000016,SFDCY_CASE_000017,SFDCY_CASE_000018</value>
        </filters>
        <label>NCS and CSC Requests</label>
    </listViews>
    <listViews>
        <fullName>Requests_Today</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Object_Route_MDT_Id__c</columns>
        <columns>Object_Name__c</columns>
        <columns>ObjectId__c</columns>
        <columns>SFDC_Record_URL__c</columns>
        <columns>API_Identifier__c</columns>
        <columns>ExternalTicketId__c</columns>
        <columns>CTS_Ticket_URL__c</columns>
        <columns>Email_Template_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ScheduledDateTime__c</columns>
        <columns>ProcessedDateTime__c</columns>
        <columns>NumberOfRetryAttempts__c</columns>
        <columns>ErrorDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Requests Today</label>
    </listViews>
    <listViews>
        <fullName>Touch_Plan_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Object_Name__c</columns>
        <columns>ObjectId__c</columns>
        <columns>SFDC_Record_URL__c</columns>
        <columns>API_Identifier__c</columns>
        <columns>ExternalTicketId__c</columns>
        <columns>CTS_Ticket_URL__c</columns>
        <columns>Email_Template_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ScheduledDateTime__c</columns>
        <columns>ProcessedDateTime__c</columns>
        <columns>NumberOfRetryAttempts__c</columns>
        <columns>ErrorDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>API_Identifier__c</field>
            <operation>equals</operation>
            <value>SFDCY_CASE_000012,SFDCY_CASE_000013,SFDCY_CASE_000014</value>
        </filters>
        <label>Touch Plan Requests</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{000000000}</displayFormat>
        <label>Asynch Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDCToCTSAsynchRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>